--- a/docs.html
+++ b/docs.html
@@ -21,7 +21,9 @@
     </style>
   </head>
   <body>
-    <redoc spec-url="http://localhost:8080/api_schema.json"></redoc>
+    <redoc
+      spec-url="https://ubiquitous-shortbread-9d5598.netlify.app/api_schema.json"
+    ></redoc>
     <script src="https://cdn.redoc.ly/redoc/latest/bundles/redoc.standalone.js"></script>
   </body>
 </html>
